[package]
name = "testnet-spawner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.15"
axum-macros = "0.2.3"
tokio = { version = "1", features = ["full"] }
hyper = "0.14.20"
tower = "0.4.13"
tower-http = "0.3.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
http = "0.2.8"
once_cell = "1.14.0"
jsonrpsee = { version = "0.15.1", features = ["http-client"] }
# ^ Is it possible to pull in anvil/rpc as a package?
